[package]
name = "cosine"
version = "0.1.0"
authors = ["Asa Zeren <asaizeren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
ignore = "0.4"
shellexpand = "2.0"
